# Goose-s-Calendar

./: README.md  pyproject.toml  scratch.py
src/: config.py  data.py  main.py  test.py  view.py  viewmodels.py
src/models/: data.py
src/viewmodels/: viewmodels.py
