# pyproject.toml 文件

[project]
name = "Goose's Calendar"
version = "0.0.0"
description = "一款精美且功能丰富的桌面日历应用。专供GOOSE使用。"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "yyh", email = "924483141@qq.com" }
]

# --- 重点：在这里列出您项目用到的所有第三方库 ---
dependencies = [
  "flet",
  "lunarcalendar",
  "chinese_calendar"
]

# --- Flet 专属的打包配置 ---
[tool.flet]
# 这些信息会显示在最终生成 .exe 文件的属性里
product = "鹅娃子日历"
company = "yyh"
copyright = "Copyright (C) 2025 by yyh"

# 告诉 Flet 去哪里找你的 main.py 文件
[tool.flet.app]
path = "src"